# C_study

./: .gitignore  Linux.docx  Linux.txt  git_push_script.sh
201/201_tests/class_test/class_1_23/: CMakeLists.txt
201/201_tests/lab_test/ass2/ass2_test/: CMakeLists.txt  Makefile  error_checking.c  error_checking.h  find_substring.c  generate_matrix.c  main  puzzle2D  puzzle2D 2  puzzle2D.c  puzzle2D.h  wordSearch2D  wordSearch2D.c
201/201期中1复习/: cheat_sheet.docx
201/demo/: CMakeLists.txt  Makefile  main  main.c  quicksort.c
201期中1复习/: cheat_sheet.docx
Data_structure/Binary_Search/: CMakeLists.txt  main.c
Data_structure/Sequential_list/: CMakeLists.txt  main.c
Data_structure/bubble_sort/: main.c
Data_structure/double_linked_list/: CMakeLists.txt  main.c
Data_structure/insert_sort/: CMakeLists.txt  main.c
Data_structure/linked_list/: main.c
Data_structure/merge_sort/: main.c
Data_structure/queue/: CMakeLists.txt  main.c
Data_structure/quick_sort/: main.c
Data_structure/selection_sort/: main.c
Data_structure/stack/: main.c
First/: CMakeLists.txt  main  main.c  变量.c  基本格式和数据类型.c  类型转换.c  运算符.c
Second/: Array数组.c  CMakeLists.txt  for使用.c  if使用.c  main.c  stringg.c  while的使用.c
Third/: CMakeLists.txt  functions.c  main.c  test.c  宏.c  指针.c  文件预处理.c  类型别名.c  结构体.c  联合体和枚举.c
gdb_study/: GDB调试器.txt  Makefile  test1  test1.c
git_github/: git_github.txt  linux_Unix操作.txt
make_file/: main.c  make_makefile  makefile  tool1.c  tool1.h  tool2.c  tool2.h
make_file/test1/: helloworld.c  helloworld.sh  makefile
optional/: CMakeLists.txt  main.c
(+273 files in other folders)
